# locked

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/locked/: locked.hh
test/: CMakeLists.txt  test.cc
